// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should render 1`] = `
.emotion-8 {
  top: 16px;
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  text-transform: uppercase;
}

@media (max-width:540px) {
  .emotion-8 {
    margin-top: -32px;
    position: relative;
    padding-bottom: 32px;
  }
}

.emotion-0 {
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:link,
.emotion-0:visited {
  color: #383d43;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0::after {
  padding-left: 8px;
  content: '/';
}

.emotion-6 {
  font-size: 12px;
  padding-left: 8px;
  line-height: unset;
  margin-top: 0;
  margin-bottom: 0;
  opacity: 0.6;
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    MOCK react-helmet
    <a
      aria-current="page"
      class="emotion-0 emotion-1"
      data-tracking="breadcrumb__link"
      href="/"
    >
      Home
    </a>
    <a
      class="emotion-0 emotion-1"
      data-tracking="breadcrumb__link"
      href="/internet"
    >
      Internet
    </a>
    <a
      class="emotion-0 emotion-1"
      data-tracking="breadcrumb__link"
      href="/gigabit"
    >
      Gigabit
    </a>
    <p
      class="emotion-6 emotion-7"
    >
      Gigabit Plans
    </p>
  </div>
</div>
`;

exports[`Breadcrumbs should render with path generated crumbs 1`] = `
.emotion-8 {
  top: 16px;
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  text-transform: uppercase;
}

@media (max-width:540px) {
  .emotion-8 {
    margin-top: -32px;
    position: relative;
    padding-bottom: 32px;
  }
}

.emotion-0 {
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:link,
.emotion-0:visited {
  color: #383d43;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0::after {
  padding-left: 8px;
  content: '/';
}

.emotion-6 {
  font-size: 12px;
  padding-left: 8px;
  line-height: unset;
  margin-top: 0;
  margin-bottom: 0;
  opacity: 0.6;
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    MOCK react-helmet
    <a
      aria-current="page"
      class="emotion-0 emotion-1"
      data-tracking="breadcrumb__link"
      href="/"
    >
      Home
    </a>
    <a
      class="emotion-0 emotion-1"
      data-tracking="breadcrumb__link"
      href="/tv"
    >
      tv
    </a>
    <a
      class="emotion-0 emotion-1"
      data-tracking="breadcrumb__link"
      href="/tv/channels"
    >
      channels
    </a>
    <p
      class="emotion-6 emotion-7"
    >
      A&E
    </p>
  </div>
</div>
`;
